Fixed code block overflowing and not centering

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -12,6 +12,9 @@ body,
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.gatsby-highlight {
+  max-width: 100%;
+}
 article,
 aside,
 details,
